--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "angular-aria": "^1.7.9",
     "angular-font-awesome": "^3.1.2",
     "angular-material": "^1.1.21",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "js-brasil": "^2.1.0",
     "moment": "^2.25.1",
+    "ng-brazil": "^2.0.10",
+    "ng2-currency-mask": "^9.0.2",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
+    "text-mask-addons": "^3.8.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
